- History table now shows information correctly responding to the user table user's choice - History table aligned to the center - Minor changes to the user post servlet - Changed run counter to correctly show the run id number - Minor spacing changes

--- a/Client/src/css/aviad-skin.css
+++ b/Client/src/css/aviad-skin.css
@@ -199,6 +199,10 @@ FlowPane, StackPane, AnchorPane {
     -fx-alignment: CENTER;
 }
 
+#userExecutionsTable .table-cell {
+    -fx-alignment: CENTER;
+}
+
 /* ---------- Buttons (primary) ---------- */
 .button {
     -fx-background-color: #70ad47;
